--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,119 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  margin: 0; 
+  padding: 0; 
 }
 
+body{
+  background-color: #f3f7f9;
+  overflow-x: hidden
+ 
+}
+
+h1{
+  font-family: "Raleway", sans-serif;
+  font-size: 3rem;
+}
+
+h2{
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 200;
+  letter-spacing:2px;
+}
+
+.container-nav {
+  width: 100%;
+  height: 20vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.about-me{
+  font-family: "Playfair Display", serif;
+  font-size: 1.2rem;
+  letter-spacing:3px;
+}
+
+.contact-section{
+  width: 100%;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+
+  display: flex;
+  flex-direction: column;
+}
+.heading-contact{
+margin: auto;
+}
+
+.contact-text{
+  font-family: "Playfair Display", serif;
+  text-align: center;
+
+}
+
+.card-title{
+  font-family: "Raleway", sans-serif;
+
+}
+
+.card-text{
+  font-family: "Playfair Display", serif;
+
+
+}
+
+.div-email{
+  display: flex;
+
+
+}
+
+.span-email{
+  font-family: "Raleway", sans-serif;
+  margin-left: 1vw;
+  margin-top: 2vh;
+
+}
 a {
-  color: inherit;
-  text-decoration: none;
+  text-decoration: none; 
+  color: inherit; 
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a:hover, a:focus, a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 1rem;
   }
+
+  h1{
+    font-size: 1.5rem;
+  }
+
+  .span-email {
+    font-size: 0.8rem;
+    margin-top: 1vw;
+    margin-left: 2vw;
+  }
+}
+
+@media (max-width: 1240px) { 
+  .about-me {
+    font-size: 0.8rem;
+    
+  }
+
+
 }
